<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all">

        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_inicio"/>

        <item
            android:id="@+id/menu_pedido"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/nav_pedido"/>

        <item
            android:id="@+id/menu_sync"
            android:icon="@drawable/ic_sync_black_24dp"
            android:title="@string/nav_sync"/>

        <item
            android:id="@+id/menu_cuenta"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_cuenta"/>

        <item
            android:id="@+id/menu_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_info"/>

    </group>

</menu>
