<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_divider">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/my_white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:layout_marginBottom="2dp">

                <ImageView
                    android:id="@+id/m_img_cliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_person_black_24dp"/>

                <TextView
                    android:id="@+id/m_lbl_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_toRightOf="@+id/m_img_cliente"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/my_primary_text"
                    android:text="@string/m_num_cliente"/>

                <TextView
                    android:id="@+id/m_cliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/m_lbl_cliente"
                    android:layout_toRightOf="@id/m_img_cliente"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/my_secondary_text"
                    android:text=""/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/my_white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:layout_marginBottom="2dp">

                <ImageView
                    android:id="@+id/m_img_prod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_local_mall_black_24dp"/>

                <TextView
                    android:id="@+id/m_lbl_prod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_toRightOf="@+id/m_img_prod"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/my_primary_text"
                    android:text="@string/m_num_producto"/>

                <TextView
                    android:id="@+id/m_prod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/m_lbl_prod"
                    android:layout_toRightOf="@id/m_img_prod"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/my_secondary_text"
                    android:text=""/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/my_white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:layout_marginBottom="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/m_ventas"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/my_primary_text"/>

                <ListView
                    android:id="@+id/list_ventas"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                </ListView>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/my_primary_text"
        app:itemTextColor="@color/my_primary_text"
        app:menu="@menu/navigationdrawer" />

</android.support.v4.widget.DrawerLayout>
